added the background image and set it cover the entire page  and no repeat itself

--- a/style.css
+++ b/style.css
@@ -9,4 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url(../JS_Form/Assets/shopping-cart.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
 }
