--- a/style.css
+++ b/style.css
@@ -16,4 +16,16 @@
 }
 .form-wrap{
   background-color: rgb(255 255 255 / 75%);
+  width: 450px;
+  border-radius: 10px;
+  padding: 35px 40px;
+  backdrop-filter:blur(5px) ;
+}
+
+h1{
+  text-align: center;
+  font-size: 45px;
+  margin-bottom: 15px;
+  font-variant: small-caps;
+  font-family: 'Acme',sans-serif;
 }
