--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ h1{
   font-variant: small-caps;
   font-family: 'Acme',sans-serif;
 }
+.single-input{
+  width: 100%;
+  padding: 14px 10px;
+  border: 1px solid rgba(0,0,0,0.3521);
+}
