--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(shopping-cart.jpg);
+  background-image: url(../Assets/shopping-cart.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
