updated the relative link in css for bg image

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../Assets/shoppingcart.jpg);
+  background-image: url(Assets/shoppingcart.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
