--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('shoppingcart.jpg');
+  background-image: url('./shoppingcart.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
