--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('https://www.paisabazaar.com/wp-content/uploads/2017/10/Gold-Loan-vs-LAP.jpg');
+  background-image: url(https://www.paisabazaar.com/wp-content/uploads/2017/10/Gold-Loan-vs-LAP.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
