--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../Assets/Gold-Loan-vs-LAP.jpg);
+  background-image: url(../Assets/GoldLAP.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
