--- a/stylelogin.css
+++ b/stylelogin.css
@@ -1,4 +1,3 @@
 .main-parent{
-  background-image: url('https://www.paisabazaar.com/wp-content/uploads/2017/10/Gold-Loan-vs-LAP.jpg')!important;
-
+  /* background-image:url('https://www.paisabazaar.com/wp-content/uploads/2017/10/Gold-Loan-vs-LAP.jpg')!important; */
 }
